Fixed mobile-menu-overlay not showing on mobile devices.

--- a/sass/3-layouts/_header.sass
+++ b/sass/3-layouts/_header.sass
@@ -1,19 +1,24 @@
 /* Headers, Heroes, and Sliders Ohh My */
+.navigation
+  position: relative
+  overflow: hidden
+  width: 100%
+
 .top-nav, .main-nav
   text-transform: uppercase
   font-weight: 800
   letter-spacing: 0.5px
 
 .top-nav
+  position: fixed
+  top: 0
+  left: 0
   background-color: $black
   font-size: rem-calc(12)
   border-bottom: 2px solid $red
-  position: fixed
-  z-index: 1
   width: 100%
   height: 10px
-  top: 0
-  left: 0
+  z-index: 1
 
   a
     color: $white
@@ -37,18 +42,19 @@
     justify-content: flex-end
 
 .main-nav
+  position: fixed
+  top: 10px
+  left: 0
+  z-index: 2
   background-color: $white
   background-image: url("../img/ps-neutral.png")
-  box-shadow: 0 1px 5px rgba(0,0,0,0.3)
+  box-shadow: $global-box-shadow
   font-size: rem-calc(14)
-  position: fixed
   width: 100%
-  z-index: 2
-  top: 10px
   height: 70px
 
-  @include breakpoint(large)
-    top: 36px
+  // @include breakpoint(large)
+  //   top: 36px
 
 
 .mobile-menu
@@ -59,81 +65,8 @@
   right: 0
   top: -25px
 
-.mobile-btn
-  width: 40px
-  height: 41px
-  position: relative
-  transform: rotate(0deg)
-  transition: .2s ease-in-out
-  cursor: pointer
-  z-index: 9999
-
-  span
-    display: block
-    position: absolute
-    height: 6px
-    width: 20px
-    background: $black
-    opacity: 1
-    transform: rotate(0deg)
-    transition: .25s ease-in-out
-
-  span:nth-child(even)
-    left: 50%
-    border-radius: 0 30px 30px 0
-
-  span:nth-child(odd)
-    left: 0px
-    border-radius: 30px 0 0 30px
-
-  span:nth-child(1), span:nth-child(2)
-    top: 5px
-
-  span:nth-child(3), span:nth-child(4)
-    top: 18px
-
-  span:nth-child(5), span:nth-child(6)
-    top: 31px
-
-
-.open
-  span
-    background: $red
-
-
-  span:nth-child(1), span:nth-child(6)
-    transform: rotate(45deg)
-
-  span:nth-child(2), span:nth-child(5)
-    transform: rotate(-45deg)
-
-  span:nth-child(1)
-    left: 5px
-    top: 10px
-
-  span:nth-child(2)
-    left: calc(50% - 5px)
-    top: 10px
-
-  span:nth-child(3)
-    left: -50%
-    opacity: 0
-
-  span:nth-child(4)
-    left: 100%
-    opacity: 0
-
-  span:nth-child(5)
-    left: 5px
-    top: 20px
-
-  span:nth-child(6)
-    left: calc(50% - 5px)
-    top: 20px
-
-
 .mobile-menu-overlay
-  z-index: 1500
+  z-index: 2000
   position: fixed
   top: 80px
   left: 0
@@ -144,10 +77,8 @@
   overflow: auto
   box-shadow: 0 1px 3px rgba(0,0,0,0.3)
 
-  // @include breakpoint(medium down)
-  //   @include breakpoint(landscape)
-  //     height: 100%
-  //     top: 90px
+  .is-open
+    display: block
 
   ul
     text-align: center
